Separated code into sub-modules. Now you can use the core lib without the CLI code
- Exposed utility functions from Blacksmith
- Exposed internal data of exception for better handling when using as lib
- Some maven magic